@@ -306,7 +306,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>${project.build.sourceEncoding}</project.reporting.outputEncoding>
     <!-- NOTE: sync tukaani version with commons-compress in tika-parsers -->
-    <commons.compress.version>1.14</commons.compress.version>
+    <commons.compress.version>1.16.1</commons.compress.version>
     <commons.io.version>2.6</commons.io.version>
     <gson.version>2.8.1</gson.version>
     <cxf.version>3.0.16</cxf.version>
