@@ -39,7 +39,7 @@
     <!-- NOTE: sync codec version with POI -->
     <codec.version>1.10</codec.version>
     <!-- NOTE: sync tukaani version with commons-compress in tika-parent-->
-    <tukaani.version>1.6</tukaani.version>
+    <tukaani.version>1.8</tukaani.version>
     <mime4j.version>0.8.1</mime4j.version>
     <vorbis.version>0.8</vorbis.version>
     <pdfbox.version>2.0.8</pdfbox.version>
@@ -149,6 +149,12 @@
       <groupId>org.tukaani</groupId>
       <artifactId>xz</artifactId>
       <version>${tukaani.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.github.luben</groupId>
+      <artifactId>zstd-jni</artifactId>
+      <version>1.3.3-3</version>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
